Resolves: tdf#90130 don't clobber new solid-color on seeing old transparency

Change-Id: I1ea86dca37cbce416564c5e198779dd132125b02